argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocdui-gw
  namespace: argocd # Or the namespace where you want your gateway to run
spec:
  gatewayClassName: traefik # Replace with the name of your GatewayClass
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same 
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocdui-cert
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocdui-https-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocdui-gw
      sectionName: https
      kind: Gateway

  hostnames:
    - argocdui.services.labk3s.perihelion.lan

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocdui-http-route
  namespace: argocd # Or the namespace where you want your gateway to run
spec:
  parentRefs:
    # This should reference your deployed Gateway resource.
    # Replace 'argocdui-gw' with the actual name of your Gateway.
    # You might also need to specify the namespace of the Gateway
    # if it's not in the same namespace as the HTTPRoute.
    - name: argocdui-gw
      sectionName: http
      kind: Gateway
      namespace: argocd
  hostnames:
    - argocdui.services.labk3s.perihelion.lan
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
